--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
   padding: 0;
 }
 
+
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Comfortaa", sans-serif;
   background: linear-gradient(135deg, #2e2e2e, #141414);
   color: #fff;
   display: flex;
